# unicorn-binance-suite

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  meta.yaml  pyproject.toml  requirements.txt  setup.py  unittest_binance_suite.py
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bug_report_old.md  config.yml  feature_request.yml
.github/workflows/: build_conda.yml  build_wheels.yml  unit-tests.yml
dev/: reset.sh  set_version_config.txt
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: create_docs.sh  install_sphinx.sh
dev/sphinx/source/: changelog.md  conf.py  index.rst  readme.md
docs/: .buildinfo  CHANGELOG.html  CNAME  README.html  changelog.html  code_of_conduct.html  contributing.html  copyright.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  security.html  unicorn_binance_websocket_api.html
docs/_sources/: CHANGELOG.md.txt  README.md.txt  changelog.md.txt  copyright.rst.txt  license.rst.txt  modules.rst.txt  readme.md.txt
pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
sphinx/: create_docs.sh
sphinx/source/: conf.py  index.rst
tools/: get_versions_of_unicorn_packages.py
unicorn-binance-suite/: main.py
unicorn_binance_suite/: __init__.py  main.py  manager.py
