[tool.poetry]
name = "unicorn-binance-suite"
version = "2.0.0"
description = "The UNICORN Binance Suite is a Python Meta Package of unicorn-fy, unicorn-binance-local-depth-cache, unicorn-binance-rest-api, unicorn-binance-trailing-stop-loss and unicorn-binance-websocket-api. "
authors = ["LUCIT Systems and Development <info@lucit.tech>"]
license = "LSOSL - LUCIT Synergetic Open Source License"
readme = "README.md"
homepage = "https://www.lucit.tech/unicorn-binance-suite.html"
documentation = "https://unicorn-binance-suite.docs.lucit.tech"
repository = "https://github.com/LUCIT-Systems-and-Development/unicorn-binance-suite"

[tool.poetry.urls]
'Howto' = 'https://www.lucit.tech/unicorn-binance-suite.html#howto'
'Documentation' = 'https://unicorn-binance-suite.docs.lucit.tech'
'Wiki' = 'https://github.com/LUCIT-Systems-and-Development/unicorn-binance-suite/wiki'
'Author' = 'https://www.lucit.tech'
'Changes' = 'https://unicorn-binance-suite.docs.lucit.tech/changelog.html'
'License' = 'https://unicorn-binance-suite.docs.lucit.tech/license.html'
'Issue Tracker' = 'https://github.com/LUCIT-Systems-and-Development/unicorn-binance-suite/issues'
'Telegram' = 'https://t.me/unicorndevs'
'Chat' = 'https://app.gitter.im/#/room/#unicorn-binance-suite_unicorn-binance-suite:gitter.im'
'Get Support' = 'https://www.lucit.tech/get-support.html'
'LUCIT Online Shop' = 'https://shop.lucit.services/software/unicorn-binance-suite'

[tool.poetry.dependencies]
python = ">=3.7.0"
lucit-licensing-python = ">=1.8.1"
unicorn-fy = ">=0.13.1"
unicorn-binance-local-depth-cache = ">=1.0.0"
unicorn-binance-rest-api = ">=2.0.0"
unicorn-binance-websocket-api = ">=2.0.0"
unicorn-binance-trailing-stop-loss = ">=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel", "Cython", "pip"]
build-backend = "setuptools.build_meta"

[tool.poetry.package_data]
unicorn_binance_suite = ["*.so", "*.dll"]
